# another-cuhk-course-planner

./: .gitignore  CLAUDE.md  CLAUDE_20250902_2147.md  CourseCard_backup.tsx  README.md  analyze_course_data.py  cuhk_scraper.py  data_utils.py  generate_index.py  html_utils.py  move_course_data.py  publish_course_data.py  pyproject.toml  requirements.txt  scrape_all_subjects.py  test_ddddocr.py
analysis/: course_analysis_20250815_021502.json  course_analysis_20250815_021502.txt  course_analysis_20250815_024210.json  course_analysis_20250815_024210.txt  course_analysis_20250815_025105.txt  course_analysis_20250815_030046.txt  course_analysis_20250815_031104.txt  course_analysis_20250815_032219.txt  course_analysis_20250815_114802.txt  course_analysis_20250815_132129.txt  course_analysis_20250817_134457.txt  course_analysis_20250817_135341.txt  course_analysis_20250817_140558.txt  course_analysis_20250817_142105.txt  course_analysis_20250817_142412.txt  course_analysis_20250817_143036.txt  course_analysis_20250817_144206.txt
data/: ACCT.json  ACPY.json  AENP.json  AEPT.json  AIMS.json  AIST.json  AIST_20250729_151652.json  ANAT.json  ANIC.json  ANTH.json  APEP.json  ARAB.json  ARCH.json  ARTS.json  ASEI.json  BAMS.json  BASA.json  BBMS.json  BCHE.json  BCHM.json  BCJC.json  BCME.json  BECE.json  BEHM.json  BEST.json  BIOL.json  BIOS.json  BMBL.json  BMED.json  BMEG.json  BMJC.json  BSCG.json  BUDS.json  CCNU.json  CCSS.json  CDAS.json  CENG.json  CGEN.json  CHCU.json  CHED.json  (+231 more)
sample-webpages/: Browse Course Catalog.mhtml
tests/: debug_html_conversion.py  (+18 more)
(+395 files in other folders)
